@@ -1,5 +1,5 @@
 
-#element-wrapper-school_use_default_school_values {
+.element-wrapper--school-use-default-values-checkbox {
   border: 3px solid #888;
   padding: 10px;
   margin: 10px 0px 50px; 0px;
